demos/grpc/poll-summary-server/kube/overlays/dev/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-grpc-record
spec:
  rules:
  - host: record.grpc.demo.dev.apps.v2tools.com
    http:
      paths:
      - path: /
        backend:
          serviceName: presentation-server
          servicePort: grpc-web
  tls:
  - hosts:
    - record.grpc.demo.dev.apps.v2tools.com
    secretName: record-grpc-demo-dev-apps-v2tools-crt
